2018-04-19 Jan Kotanski <jan.kotanski@desy.de>
	* add width to linecuts
	* tagged as 1.14.0

2018-04-17 Jan Kotanski <jan.kotanski@desy.de>
	* fix 1d plot slices
	* fix support for mca
	* fix switch axes scale off
	* tagged as 1.13.4

2018-04-12 Jan Kotanski <jan.kotanski@desy.de>
	* fix commenting the FABIO
	* tagged as 1.13.3

2018-04-12 Jan Kotanski <jan.kotanski@desy.de>
	* fix for Andre's tiffloader realated to overflow PE
	* use tiffloader in emergency case, i.e. PIL does not work
	* tagged as 1.13.2

2018-04-05 Jan Kotanski <jan.kotanski@desy.de>
	* do not plot projections on wrong input
	* tagged as 1.13.1

2018-03-28 Jan Kotanski <jan.kotanski@desy.de>
	* add signals from LineCut handles
	* add ComboBox for 1D x coorinate in LineCut
	* add error message from door for mesh macro
	* tagged as 1.13.0

2018-03-27 Jan Kotanski <jan.kotanski@desy.de>
	* interpete warnings in projections
	* tagged as 1.12.2

2018-03-27 Jan Kotanski <jan.kotanski@desy.de>
	* add missing sphinx docs
	* change size of bottom plot widget
	* tagged as 1.12.1

2018-03-27 Jan Kotanski <jan.kotanski@desy.de>
	* add row and column slices in projections
	* tagged as 1.12.0

2018-03-27 Jan Kotanski <jan.kotanski@desy.de>
	* add projections
	* fix issue with hanging qt events
	* tagged as 1.11.0

2018-03-23 Jan Kotanski <jan.kotanski@desy.de>
	* add 1d plot tool
	* tagged as 1.10.0

2018-03-22 Jan Kotanski <jan.kotanski@desy.de>
	* add sardana tips
	* tagged as 1.9.0

2018-03-21 Jan Kotanski <jan.kotanski@desy.de>
	* fix relation between CBF/TIFLoader and fabio/Pillow
	* fix apply mask
	* tagged as 1.8.2

2018-03-14 Jan Kotanski <jan.kotanski@desy.de>
	* remove clipping to hardcode value
	* tagged as 1.8.1

2018-03-13 Jan Kotanski <jan.kotanski@desy.de>
	* add mesh scan
	* add hidra data port to configuration
	* add hidra detector server list to configuration
	* fix disconnect tools
	* tagged as 1.8.0

2018-03-09 Jan Kotanski <jan.kotanski@desy.de>
	* add auto down sample switch