@@ -1,5 +1,6 @@
 2018-04-19 Jan Kotanski <jan.kotanski@desy.de>
 	* add width to linecuts
+	* store detector geometry
 	* tagged as 1.14.0
 
 2018-04-17 Jan Kotanski <jan.kotanski@desy.de>
